--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "classnames": "2.2.6",
     "emotion": "9.2.10",
+    "emotion-theming": "9.2.9",
     "prop-types": "15.6.2",
     "react": "16.4.2",
     "react-dom": "16.4.2",
